libpod (4.7.1+ds4-7) UNRELEASED; urgency=medium

  * Remove a superfluous stanza from d/copyright.
  * Drop fuse-overlayfs Suggests, as the kernel overlayfs driver can be used
    with rootless containers since Linux v5.13 and is now recommended.
  * Remove versioned Depends/Recommends/Breaks for versions that predate
    oldstable (bullseye).

 -- Faidon Liambotis <paravoid@debian.org>  Tue, 31 Oct 2023 14:44:43 +0200

libpod (4.7.1+ds4-5) unstable; urgency=medium

  * avoid file conflict with podman-compose

 -- Reinhard Tartler <siretart@tauware.de>  Fri, 27 Oct 2023 14:58:33 -0400

libpod (4.7.1+ds4-4) unstable; urgency=medium

  * Upload to unstable
  * Build against golang-github-checkpoint-restore-go-criu-dev v6
  * drop patches merged upstream
  * drop disable-sigstore.patch
  * avoid file conflicts with docker-compose (Closes: #1054460)

 -- Reinhard Tartler <siretart@tauware.de>  Fri, 27 Oct 2023 14:01:53 -0400

libpod (4.7.1+ds4-3) experimental; urgency=medium

  * align test invocation with upstream makefile to fix FTBFS

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 23 Oct 2023 09:39:59 -0400

libpod (4.7.1+ds4-2) experimental; urgency=medium

  * more reliable way to build podman-machine

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 23 Oct 2023 06:58:01 -0400

libpod (4.7.1+ds4-1) experimental; urgency=medium

  * New upstream release (Closes: #1053131)
  * Refresh patches
  * Tighten dependencies

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 16 Oct 2023 08:37:48 -0400

libpod (4.6.2+ds1-4) unstable; urgency=medium

  [ Anthony Fok ]
  * [backport] libpod: move oom_score_adj clamp to init

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 22 Oct 2023 17:24:16 -0400

libpod (4.6.2+ds1-3) unstable; urgency=medium

  [ Konstantin Demin ]
  * [backport] fix mount of cgroup without a netns

  [ Reinhard Tartler ]
  * [backport] linux, rootless: clamp oom_score_adj if it is too low
  * podman: Add passt as recommends (Closes: #1052449)
