@@ -1,2 +1,3 @@
 usr/libexec/podman/quadlet lib/systemd/system-generators/podman-system-generator
 usr/libexec/podman/quadlet lib/systemd/user-generators/podman-user-generator
+usr/bin/podman usr/bin/podmansh
